--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.commit451:PhotoView:1.2.4'
     testCompile 'junit:junit:4.12'
 }
